cleaning student data

--- a/pandas_practice.ipynb
+++ b/pandas_practice.ipynb
@@ -2,29 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 24,
    "id": "f2102040",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "IndentationError",
-     "evalue": "unexpected indent (3286863874.py, line 3)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"/var/folders/g5/4jbp7cnj769c9jsjd_43rjhr0000gn/T/ipykernel_20822/3286863874.py\"\u001b[0;36m, line \u001b[0;32m3\u001b[0m\n\u001b[0;31m    \"Wilson High School\",\"Wright High School\"]\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m unexpected indent\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# List of high schools\n",
-    "#high_schools = [\"Hernandez High School\", \"Figueroa High School\",\n",
+    "high_schools = [\"Hernandez High School\", \"Figueroa High School\",\n",
     "                \"Wilson High School\",\"Wright High School\"]\n",
     "                "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 25,
    "id": "8d7babd5",
    "metadata": {},
    "outputs": [
@@ -46,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 26,
    "id": "d9b1f72d",
    "metadata": {},
    "outputs": [],
@@ -60,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 27,
    "id": "2911c7ab",
    "metadata": {},
    "outputs": [
@@ -82,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 28,
    "id": "0e3341b6",
    "metadata": {},
    "outputs": [],
@@ -93,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 29,
    "id": "3849deca",
    "metadata": {},
    "outputs": [],
@@ -104,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 30,
    "id": "2ed8972e",
    "metadata": {},
    "outputs": [],
@@ -115,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 31,
    "id": "1e51513b",
    "metadata": {},
    "outputs": [
@@ -140,7 +131,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -153,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 32,
    "id": "ace4611c",
    "metadata": {},
    "outputs": [
@@ -186,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 33,
    "id": "8954a8d4",
    "metadata": {},
    "outputs": [],
@@ -201,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 34,
    "id": "b9fa598a",
    "metadata": {},
    "outputs": [
@@ -275,7 +266,7 @@
        "4          4    Griffin High School   Charter"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -287,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 35,
    "id": "62d6546d",
    "metadata": {},
    "outputs": [],
@@ -303,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 36,
    "id": "b67a4a2e",
    "metadata": {},
    "outputs": [],
@@ -314,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 37,
    "id": "431109a9",
    "metadata": {},
    "outputs": [
@@ -376,7 +367,7 @@
        "4          4"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -391,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 38,
    "id": "1bb0c61f",
    "metadata": {},
    "outputs": [],
@@ -402,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 39,
    "id": "0db420e4",
    "metadata": {},
    "outputs": [
@@ -476,7 +467,7 @@
        "4          4    Griffin High School        Charter"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -487,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 40,
    "id": "dddf3350",
    "metadata": {},
    "outputs": [],
@@ -498,7 +489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 41,
    "id": "21f7eaaa",
    "metadata": {},
    "outputs": [
@@ -572,7 +563,7 @@
        "4          4    Griffin High School   Charter"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -584,7 +575,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 42,
    "id": "d5cd32a3",
    "metadata": {},
    "outputs": [
@@ -594,7 +585,7 @@
        "Index(['School ID', 'school_name', 'type'], dtype='object')"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -605,7 +596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 43,
    "id": "ca335b75",
    "metadata": {},
    "outputs": [
@@ -615,7 +606,7 @@
        "RangeIndex(start=0, stop=5, step=1)"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -626,7 +617,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 44,
    "id": "7b896d51",
    "metadata": {},
    "outputs": [
@@ -640,7 +631,7 @@
        "       [4, 'Griffin High School', 'Charter']], dtype=object)"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -652,7 +643,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "23a4530d",
+   "id": "9e784513",
    "metadata": {},
    "outputs": [],
    "source": []
